# PMVALO-Miniprojekti

./: .coverage  .coveragerc  .env  .gitignore  .pylintrc  LICENSE  README.md  library.bib  pyproject.toml  retro.md
.github/workflows/: main.yml
src/: AppLibrary.py  app.py  bibtex_gen.py  config.py  db_helper.py  schema.sql  util.py
src/static/: main.css
src/story_tests/: article_tests.robot  bibtex.robot  book_tests.robot  home.robot  inproceedings_tests.robot  resource.robot  validate_book_test.py
src/templates/: article.html  article_form.html  book.html  book_form.html  edit_article.html  edit_book.html  edit_inproceeding.html  index.html  inproceeding.html  inproceeding_form.html  reference_add.html  reference_edit.html  reference_remove.html  reference_show.html  remove_article.html  remove_book.html  remove_inproceeding.html
src/tests/: resource.robot
src/unit_tests/: BibtexFile_test.py  app_test.py  validate_book_test.py
