[project]
name = "pmvalo-miniprojekti"
version = "0.1.0"
description = ""
authors = [
    {name = "LouiseOdier",email = "maarit.vilen@helsinki.fi"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)"
    "postgres (>=4.0,<5.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "robot (>=20071211,<20071212)",
    "robotframework (>=7.3.2,<8.0.0)",
    "robotframework-seleniumlibrary (>=6.8.0,<7.0.0)"
]
