[project]
name = "pmvalo-miniprojekti"
version = "0.1.0"
description = ""
authors = [
    {name = "LouiseOdier",email = "maarit.vilen@helsinki.fi"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "postgres (>=4.0,<5.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "bibtexparser (>=1.4.3,<2.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "robotframework (>=7.3.2,<8.0.0)",
    "robotframework-seleniumlibrary (>=6.8.0,<7.0.0)",
    "pylint (>=4.0.3,<5.0.0)",
    "coverage (>=7.12.0,<8.0.0)",
    "pytest (>=9.0.1,<10.0.0)"
]
